# py-coverage-view

./: .gitignore  README.md  package.json
src/: constants.ts  extension.ts  pythonTestCoverageTaskProvider.ts
src/test/pycov-5/: .coverage  cov.py  coverage.json  pyproject.toml  setup.cfg
src/test/pycov-5/tests/: test_cov.py
